--- a/index.html
+++ b/index.html
@@ -27,7 +27,19 @@
 				</script>
 			</td>
 		</tr>
- 	</table>
+		<tr>
+			<td>
+				<br>
+				<input id = "btnReset" type="button" class="btn" value="RESET" onclick=reset_page(); />
+			</td>
+		</tr>
+	</table>
+
+	<br>
+	<div class=hi>Найди клетку с особенным цветом</div>
+	<div class=lowi>попробуй дойти и пройти доску 10х10</div>
+	<br>
+
 </center>
 </body>
 </html>
