--- a/tests/01/index.html
+++ b/tests/01/index.html
@@ -3,18 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mandalorian-2</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Заголовок</title>
 </head>
 
 <body>
-    <br>
-    <div>
-        <p class="title">Mandalorian</p>
-        <img src="mandalorian.jpg" alt="">
-    </div>
-    <p>«Мандало́рец» (англ. The Mandalorian), также известен, как «Звёздные во́йны: Мандало́рец» (англ. Star Wars: The Mandalorian), — американский телесериал в жанре космический вестерн, созданный Джоном Фавро и выходящий на стриминговом сервисе Disney+. Это первый игровой сериал, являющийся составной частью вселенной «Звёздных войн». Действие «Мандалорца» разворачивается пять лет спустя после событий «Возвращения джедая» и за 25 лет до событий «Пробуждения силы». Главным героем является охотник за головами Дин Джарин из клана мандалорцев, обитающий на окраине Новой Республики. Главную роль исполняет Педро Паскаль.</p>
-    <p class="label">Автор работы</p>
+
+    <p>Mandalorian-2</p>
+    <img src="" alt="Тут будет картинка">   
+    <p>тут текст абзаца</p>
+    <a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BD%D0%B4%D0%B0%D0%BB%D0%BE%D1%80%D0%B5%D1%86">можно взять из wiki</a>
+    <p>тут текст абзаца</p>
+    <p>тут текст абзаца</p>
+    
 </body>
 
 </html>
