--- a/tests/03/index.html
+++ b/tests/03/index.html
@@ -27,7 +27,7 @@
         <p class="text">Премьера второго сезона, также состоящего из восьми серий, состоялась 30 октября 2020 года, в то время как работа над
             третьим сезоном началась еще в апреле 2020 года.</p>
             
-        <a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BD%D0%B4%D0%B0%D0%BB%D0%BE%D1%80%D0%B5%D1%86">Источник данных</a>
+        <a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BD%D0%B4%D0%B0%D0%BB%D0%BE%D1%80%D0%B5%D1%86" target="_blank">Источник данных</a>
 
         <p class="label">Автор работы</p>
     </div>
