--- a/tests/03/index.html
+++ b/tests/03/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Заголовок</title>
+    <title>Мандалорец</title>
     <link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
